# ausbee

./: .gitignore  AUTHORS  Kconfig  LICENCE  Makefile  README.md  ausbee.mk  ausbee.sh  changelog  commit-rules  config-devices.mk  config.mk
AVRToolchain/: Kconfig
Examples/: Makefile.multiproject.template
Hardware/: timer_mapping
Libraries/libausbee/: CMakeLists.txt  README
Libraries/libausbee/include/AUSBEE/: pid.h  quadramp.h  servo.h
Libraries/libausbee/src/ax12/: ax12.c
Libraries/libausbee/src/control_system/: control_system_manager.c
Libraries/libausbee/src/control_system/filters/: diff.c
Libraries/libausbee/tools/pc/ihm/: cli.py
Libraries/libausbee/tools/pc/lidar_viewer/src/: LidarControl.h
Libraries/libausbee/tools/pc/plot/: plot.py
Operating_Systems/: Kconfig  operating_systems.mk
Project/: README  multiproject.mk  project.mk
Projects/: Makefile.template  projects.mk
Software/: .gitignore  Kconfig  Makefile  README  TODO  config.mk
Software/Libraries/libausbee/: CMakeLists.txt  Kconfig  Makefile.am  aclocal.m4  configure  libausbee.mk
Software/Libraries/libausbee/Documentation/: Doxyfile
Software/Libraries/libausbee/autom4te.cache/: traces.2  traces.3
Software/Libraries/libausbee/can/include/: can.h
Software/Libraries/libausbee/include/AUSBEE/: ax12.h  can.h  control_system_manager.h  device.h  diff.h  encoder.h  init.h  l298_driver.h  led.h  lidar.h  pid.h  quadramp.h  servo.h
Software/Libraries/libausbee/src/ax12/: ax12.c
Software/Libraries/libausbee/src/can/: can.cpp
Software/Libraries/libausbee/src/control_system/: control_system_manager.c
Software/Libraries/libausbee/src/control_system/controller/: pid.c
Software/Libraries/libausbee/src/control_system/filters/: diff.c  quadramp.c
Software/Libraries/libausbee/src/controller/: pid.c
Software/Libraries/libausbee/src/encoder/: encoder.c
Software/Libraries/libausbee/src/initialisation/: clkInit.c  gpioInit.c
Software/Libraries/libausbee/src/l298_driver/: l298_driver.c
Software/Libraries/libausbee/src/led/: led.c
Software/Libraries/libausbee/src/lidar/: lidar.c  piccolo-lidar.cpp
Software/Libraries/libausbee/src/movement_generation/: Makefile  graphic.c  graphic.cpp  graphic.h  quadramp.c  quadramp.cpp  quadramp.h  test_quadramp.c  test_quadramp.cpp  vector2.c  vector2.h
Software/Libraries/libausbee/src/movement_generation/graph/: draw_graph.sh
Software/Libraries/libausbee/src/servo/: servo.c
Software/Libraries/libausbee/tools/pc/ihm/: cliClient.py
Software/Libraries/libausbee/tools/pc/lidar_viewer/: CMakeLists.txt
Software/Libraries/libausbee/tools/pc/lidar_viewer/src/: LidarControl.cpp  LidarControl.h
Software/Libraries/libausbee/tools/pc/plot/: PlotPID.py  anim_plot.py  subplot.py
Software/libausbee/: CMakeLists.txt  Makefile.in  README  TODO  configure.ac
Software/libausbee/asserv/include/: pid.h
Software/libausbee/asserv/src/: pid.cpp
Software/libausbee/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1
Software/libausbee/can/include/: can.h
Software/libausbee/can/src/: can.cpp
Software/libausbee/doc/: Doxyfile.in
Software/libausbee/examples/pc/lidar_viewer/src/: LidarControl.cpp  LidarControl.h  MainWindow.cpp  MainWindow.h  lidar_viewer.cpp
Software/libausbee/include/AUSBEE/lidar/: lidar.h  piccolo-lidar.h
Software/libausbee/lidar/include/: piccolo-lidar.h
Software/libausbee/lidar/src/: piccolo-lidar.cpp
Software/libausbee/src/lidar/: piccolo-lidar.cpp
System-CM0/: link.ld.in  syscalls.c  system.mk
System-CM0Plus/: link.ld.in  (+1 more)
(+367 files in other folders)
